--- a/pages/sale.html
+++ b/pages/sale.html
@@ -5,90 +5,41 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Landing Page</title>
+  <title>Sale Page</title>
   <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="landingPage.css">
+  <link rel="stylesheet" href="../assets/sale/sale.css">
 
 </head>
 
 <!--    BODY    -->
 
-<body class="body">
+<body>
   <div class="header">
-    <div class="heading"> <img src="./Z_Logo.png" alt=""> </div>
+    <div class="heading"> <img src="../assets/images/Z_Logo.png" alt=""></div>
     <div class="heading2"> Zoka Developer Store </div>
   </div>
 
   <!--    NAVBAR    -->
 
   <div id="topnav">
-    <a class="active" href="./landing_page.html">Home</a>
-    <a href="./essentials/products.html">Essentials</a>
-    <a href="./sale/sale.html">Sale</a>
-    <a id="all" class="float-right" href="./all_categories/all_categories.html">Browse</a>
+    <a href="landing_page.html">Home</a>
+    <a href="products.html">Essentials</a>
+    <a class="active" href="sale.html">Sale</a>
+    <a id="all" class="float-right" href="all_categories.html">Browse</a>
   </div>
 
-  <!-- Products row 1 CAROUSEL-->
-
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-
-      <div class="carousel-item active">
-        <div class="card text-center">
-          Featured
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <img class="PRODUCT1" src="./veradesk.gif" alt="">
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="carousel-item">
-        <div class="card text-center">
-          Featured
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="carousel-item">
-        <div class="card text-center">
-          Featured
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-  </div>
-<br>
+  <br><br>
 
   <!-- PRPDUCT CARDS -->
 
   <div class="container">
 
-    <!--    EDITOR'S CHOICE ITEMS     -->
+    <!--    SALE'S CHOICE ITEMS     -->
 
-    <p class="choiceItems"> Editor's Choice </p>
+    <p class="choiceItems"> SALE! </p>
 
     <!-- Products row 2 -->
 
@@ -141,6 +92,53 @@
 
   <br><br><br>
 
+ <!-- Footer  -->
+ <footer class="container-fluid">
+    <div class="row">
+      <div class="col-12 col-md">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mb-2" focusable="false" role="img"><title>Product</title><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
+        <small class="d-block mb-3 text-muted">&copy; 2017-2018</small>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Features</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-dark" href="#">Cool stuff</a></li>
+          <li><a class="text-dark" href="#">Random feature</a></li>
+          <li><a class="text-dark" href="#">Team feature</a></li>
+          <li><a class="text-dark" href="#">Stuff for developers</a></li>
+          <li><a class="text-dark" href="#">Another one</a></li>
+          <li><a class="text-dark" href="#">Last time</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Resources</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-dark" href="#">Resource</a></li>
+          <li><a class="text-dark" href="#">Resource name</a></li>
+          <li><a class="text-dark" href="#">Another resource</a></li>
+          <li><a class="text-dark" href="#">Final resource</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Resources</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-dark" href="#">Business</a></li>
+          <li><a class="text-dark" href="#">Education</a></li>
+          <li><a class="text-dark" href="#">Government</a></li>
+          <li><a class="text-dark" href="#">Gaming</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md">
+        <h5>About</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-dark" href="#">Team</a></li>
+          <li><a class="text-dark" href="#">Locations</a></li>
+          <li><a class="text-dark" href="#">Privacy</a></li>
+          <li><a class="text-dark" href="#">Terms</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
 
   <!-- Optional JavaScript -->
@@ -148,7 +146,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="landing.js"></script>
+  <script src="../assets/landing/landing.js"></script>
 
 </body>
 </body>
